--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="enter_full_name">Enter full name</string>
     <string name="select_profile_picture">Select profile picture</string>
     <string name="send_verification_link">Send Verification Link</string>
+    <string name="no_orders_yet">No Orders Yet</string>
 </resources>
